--- a/notebooks/test/tree_sitter.ipynb
+++ b/notebooks/test/tree_sitter.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:09.848688249Z",
-     "start_time": "2023-06-25T10:13:09.798454943Z"
+     "end_time": "2023-06-26T07:27:23.851468076Z",
+     "start_time": "2023-06-26T07:27:23.805879702Z"
     }
    },
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "JAVA_LANGUAGE = Language('/home/sasce/PycharmProjects/AutoFL/notebooks/test/my-languages.so', 'java')"
@@ -59,14 +59,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:11.875679380Z",
-     "start_time": "2023-06-25T10:13:11.871067486Z"
+     "end_time": "2023-06-26T07:27:26.678726029Z",
+     "start_time": "2023-06-26T07:27:26.672462078Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "parser = Parser()\n",
@@ -75,14 +75,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:12.147234739Z",
-     "start_time": "2023-06-25T10:13:12.141171565Z"
+     "end_time": "2023-06-26T07:27:26.997511779Z",
+     "start_time": "2023-06-26T07:27:26.987241436Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "code = \"\"\"\n",
@@ -128,14 +128,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:12.442040772Z",
-     "start_time": "2023-06-25T10:13:12.438574664Z"
+     "end_time": "2023-06-26T07:27:27.318348066Z",
+     "start_time": "2023-06-26T07:27:27.310184691Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "code = bytes(code, \"utf8\")\n",
@@ -144,20 +144,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:12.786689951Z",
-     "start_time": "2023-06-25T10:13:12.773138043Z"
+     "end_time": "2023-06-26T07:27:27.774177325Z",
+     "start_time": "2023-06-26T07:27:27.769385927Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "outputs": [
     {
      "data": {
       "text/plain": "'(program (class_declaration name: (identifier) body: (class_body (line_comment) (line_comment) (line_comment) (field_declaration type: (boolean_type) declarator: (variable_declarator name: (identifier))) (line_comment) (method_declaration type: (void_type) name: (identifier) parameters: (formal_parameters) body: (block (expression_statement (assignment_expression left: (identifier) right: (true))) (expression_statement (method_invocation object: (field_access object: (identifier) field: (identifier)) name: (identifier) arguments: (argument_list (binary_expression left: (string_literal (string_fragment)) right: (identifier))))))) (line_comment) (method_declaration type: (void_type) name: (identifier) parameters: (formal_parameters) body: (block (expression_statement (assignment_expression left: (identifier) right: (false))) (expression_statement (method_invocation object: (field_access object: (identifier) field: (identifier)) name: (identifier) arguments: (argument_list (binary_expression left: (string_literal (string_fragment)) right: (identifier))))))))) (class_declaration name: (identifier) body: (class_body (method_declaration (modifiers) type: (void_type) name: (identifier) parameters: (formal_parameters (formal_parameter type: (array_type element: (type_identifier) dimensions: (dimensions)) name: (identifier))) body: (block (line_comment) (local_variable_declaration type: (type_identifier) declarator: (variable_declarator name: (identifier) value: (object_creation_expression type: (type_identifier) arguments: (argument_list)))) (local_variable_declaration type: (type_identifier) declarator: (variable_declarator name: (identifier) value: (object_creation_expression type: (type_identifier) arguments: (argument_list)))) (line_comment) (line_comment) (expression_statement (method_invocation object: (identifier) name: (identifier) arguments: (argument_list))) (line_comment) (line_comment) (expression_statement (method_invocation object: (identifier) name: (identifier) arguments: (argument_list))))))))'"
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,14 +168,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:13.067402990Z",
-     "start_time": "2023-06-25T10:13:13.060079867Z"
+     "end_time": "2023-06-26T07:27:28.126660090Z",
+     "start_time": "2023-06-26T07:27:28.119561436Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "outputs": [
     {
      "name": "stdout",
@@ -193,14 +193,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:13.322452449Z",
-     "start_time": "2023-06-25T10:13:13.317280415Z"
+     "end_time": "2023-06-26T07:27:29.165802356Z",
+     "start_time": "2023-06-26T07:27:29.159766843Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
@@ -220,14 +220,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:14.232036581Z",
-     "start_time": "2023-06-25T10:13:14.228162572Z"
+     "end_time": "2023-06-26T07:27:29.667899262Z",
+     "start_time": "2023-06-26T07:27:29.660190898Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "res = []\n",
@@ -238,14 +238,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:14.862967130Z",
-     "start_time": "2023-06-25T10:13:14.855851870Z"
+     "end_time": "2023-06-26T07:27:30.600773499Z",
+     "start_time": "2023-06-26T07:27:30.591037290Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "outputs": [
     {
      "name": "stdout",
@@ -261,14 +261,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T10:13:15.280973536Z",
-     "start_time": "2023-06-25T10:13:15.277493016Z"
+     "end_time": "2023-06-26T07:27:31.093598235Z",
+     "start_time": "2023-06-26T07:27:31.088525681Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "PYTHON_LANGUAGE = Language('/home/sasce/PycharmProjects/AutoFL/notebooks/test/my-languages.so', 'python')\n",
@@ -278,14 +278,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:15:20.547689922Z",
-     "start_time": "2023-06-25T11:15:20.524413406Z"
+     "end_time": "2023-06-26T07:27:32.408117892Z",
+     "start_time": "2023-06-26T07:27:32.401532819Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "code = \"\"\"\n",
@@ -311,20 +311,19 @@
     "        node_vec = node_labels / norm if norm > 0 else np.zeros(len(self.taxonomy))\n",
     "\n",
     "        return node_vec\n",
-    "\n",
     "\"\"\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:15:56.737414790Z",
-     "start_time": "2023-06-25T11:15:56.690064568Z"
+     "end_time": "2023-06-26T07:27:33.042849914Z",
+     "start_time": "2023-06-26T07:27:33.036631319Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "code = bytes(code, \"utf8\")\n",
@@ -333,20 +332,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:15:57.774108557Z",
-     "start_time": "2023-06-25T11:15:57.768093303Z"
+     "end_time": "2023-06-26T07:27:33.998874459Z",
+     "start_time": "2023-06-26T07:27:33.993600952Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "outputs": [
     {
      "data": {
       "text/plain": "'(module (import_from_statement module_name: (dotted_name (identifier)) name: (dotted_name (identifier))) (import_statement name: (aliased_import name: (dotted_name (identifier)) alias: (identifier))) (import_from_statement module_name: (dotted_name (identifier)) name: (dotted_name (identifier))) (import_from_statement module_name: (dotted_name (identifier) (identifier)) name: (dotted_name (identifier))) (import_from_statement module_name: (dotted_name (identifier)) name: (dotted_name (identifier))) (class_definition name: (identifier) superclasses: (argument_list (identifier)) body: (block (function_definition name: (identifier) parameters: (parameters (identifier) (typed_parameter (identifier) type: (type (identifier))) (typed_parameter (identifier) type: (type (identifier)))) return_type: (type (attribute object: (identifier) attribute: (identifier))) body: (block (expression_statement (assignment left: (identifier) right: (call function: (attribute object: (identifier) attribute: (identifier)) arguments: (argument_list (call function: (identifier) arguments: (argument_list (attribute object: (identifier) attribute: (identifier)))))))) (for_statement left: (identifier) right: (attribute object: (identifier) attribute: (identifier)) body: (block (expression_statement (assignment left: (identifier) type: (type (identifier)) right: (identifier))) (expression_statement (assignment left: (identifier) right: (call function: (identifier) arguments: (argument_list (call function: (attribute object: (attribute object: (identifier) attribute: (identifier)) attribute: (identifier)) arguments: (argument_list (call function: (identifier) arguments: (argument_list (call function: (attribute object: (identifier) attribute: (identifier)) arguments: (argument_list)))))))))) (expression_statement (assignment left: (identifier) right: (call function: (identifier) arguments: (argument_list (identifier))))) (expression_statement (assignment left: (subscript value: (identifier) subscript: (attribute object: (identifier) attribute: (identifier))) right: (call function: (identifier) arguments: (argument_list (list_comprehension body: (binary_operator left: (subscript value: (identifier) subscript: (identifier)) right: (subscript value: (attribute object: (identifier) attribute: (identifier)) subscript: (identifier))) (for_in_clause left: (identifier) right: (call function: (attribute object: (identifier) attribute: (identifier)) arguments: (argument_list)))))))))) (expression_statement (assignment left: (identifier) right: (call function: (attribute object: (identifier) attribute: (identifier)) arguments: (argument_list (identifier))))) (expression_statement (assignment left: (identifier) right: (conditional_expression (binary_operator left: (identifier) right: (identifier)) (comparison_operator (identifier) (integer)) (call function: (attribute object: (identifier) attribute: (identifier)) arguments: (argument_list (call function: (identifier) arguments: (argument_list (attribute object: (identifier) attribute: (identifier))))))))) (return_statement (identifier)))))))'"
      },
-     "execution_count": 15,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,26 +356,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:15:58.561411982Z",
-     "start_time": "2023-06-25T11:15:58.535678943Z"
+     "end_time": "2023-06-26T07:27:35.068602868Z",
+     "start_time": "2023-06-26T07:27:35.057619504Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "70\n"
+     "ename": "NameError",
+     "evalue": "Invalid node type type_identifier",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[50], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m query \u001B[38;5;241m=\u001B[39m \u001B[43mPYTHON_LANGUAGE\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mquery\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\"\"\u001B[39;49m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;124;43m    ((identifier) @identifier)\u001B[39;49m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;124;43m    ((type_identifier) @type)\u001B[39;49m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;124;43m   \u001B[39;49m\u001B[38;5;124;43m\"\"\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m      5\u001B[0m captures_b \u001B[38;5;241m=\u001B[39m query\u001B[38;5;241m.\u001B[39mcaptures(tree\u001B[38;5;241m.\u001B[39mroot_node)\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;28mlen\u001B[39m(captures_b))\n",
+      "File \u001B[0;32m~/.cache/pypoetry/virtualenvs/autofl-FDpKV8AV-py3.10/lib/python3.10/site-packages/tree_sitter/__init__.py:93\u001B[0m, in \u001B[0;36mLanguage.query\u001B[0;34m(self, source)\u001B[0m\n\u001B[1;32m     91\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mquery\u001B[39m(\u001B[38;5;28mself\u001B[39m, source):\n\u001B[1;32m     92\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Create a Query with the given source code.\"\"\"\u001B[39;00m\n\u001B[0;32m---> 93\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_language_query\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlanguage_id\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msource\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mNameError\u001B[0m: Invalid node type type_identifier"
      ]
     }
    ],
    "source": [
     "query = PYTHON_LANGUAGE.query(\"\"\"\n",
     "    ((identifier) @identifier)\n",
+    "    ((type_identifier) @type)\n",
     "   \"\"\")\n",
     "captures_b = query.captures(tree.root_node)\n",
     "print(len(captures_b))"
@@ -384,14 +389,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:16:42.576616442Z",
-     "start_time": "2023-06-25T11:16:42.530602282Z"
+     "end_time": "2023-06-26T07:27:35.641704258Z",
+     "start_time": "2023-06-26T07:27:35.617738346Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "res = []\n",
@@ -402,14 +407,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:16:55.243305099Z",
-     "start_time": "2023-06-25T11:16:55.218749593Z"
+     "end_time": "2023-06-26T07:26:07.949240197Z",
+     "start_time": "2023-06-26T07:26:07.945483832Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -425,14 +430,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:16:58.770892215Z",
-     "start_time": "2023-06-25T11:16:58.744531859Z"
+     "end_time": "2023-06-26T07:26:08.350147354Z",
+     "start_time": "2023-06-26T07:26:08.340962689Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "gt = ['collections', 'Counter', 'numpy', 'np', 'multiset', 'Multiset', 'entity',\n",
@@ -448,20 +453,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:17:58.706965172Z",
-     "start_time": "2023-06-25T11:17:58.686022385Z"
+     "end_time": "2023-06-26T07:26:13.546044095Z",
+     "start_time": "2023-06-26T07:26:13.537963709Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
       "text/plain": "71"
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,20 +477,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:18:02.175332501Z",
-     "start_time": "2023-06-25T11:18:02.140636521Z"
+     "end_time": "2023-06-26T07:26:14.176770604Z",
+     "start_time": "2023-06-26T07:26:14.161063402Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
       "text/plain": "Multiset({})"
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,8 +503,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-25T11:19:03.396378381Z",
-     "start_time": "2023-06-25T11:19:03.383987499Z"
+     "end_time": "2023-06-26T07:26:16.745946755Z",
+     "start_time": "2023-06-26T07:26:16.738504434Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-26T07:26:17.242912865Z",
+     "start_time": "2023-06-26T07:26:17.221605784Z"
     }
    }
   },
