WIP - Deploy and test

--- a/notebooks/test/tree_sitter.ipynb
+++ b/notebooks/test/tree_sitter.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-27T13:58:50.225592520Z",
-     "start_time": "2023-06-27T13:58:50.184906293Z"
+     "end_time": "2023-06-30T16:50:17.702084389Z",
+     "start_time": "2023-06-30T16:50:17.700273904Z"
     }
    },
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "JAVA_LANGUAGE = Language('/home/sasce/PycharmProjects/AutoFL/notebooks/test/languages.so', 'java')"
@@ -64,14 +64,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-27T12:18:17.157367561Z",
-     "start_time": "2023-06-27T12:18:17.154132162Z"
+     "end_time": "2023-06-30T16:50:33.497530820Z",
+     "start_time": "2023-06-30T16:50:33.487341666Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "parser = Parser()\n",
@@ -80,17 +80,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-27T12:18:17.163530359Z",
-     "start_time": "2023-06-27T12:18:17.158818395Z"
+     "end_time": "2023-06-30T16:50:40.350720321Z",
+     "start_time": "2023-06-30T16:50:40.336350549Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "code = \"\"\"\n",
+    "package weka.core.converters;\n",
+    "\n",
+    "import weka.core.CheckGOE;\n",
+    "import weka.core.CheckOptionHandler;\n",
+    "import weka.core.Instances;\n",
+    "import weka.core.OptionHandler;\n",
+    "import weka.core.TestInstances;\n",
+    "\n",
+    "import junit.framework.TestCase;\n",
     "class Lamp {\n",
     "\n",
     "  // stores the value for light\n",
@@ -133,14 +142,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-27T12:18:17.169194896Z",
-     "start_time": "2023-06-27T12:18:17.164980914Z"
+     "end_time": "2023-06-30T16:50:43.288694714Z",
+     "start_time": "2023-06-30T16:50:43.278997015Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "code = bytes(code, \"utf8\")\n",
@@ -149,20 +158,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-27T12:18:17.216749917Z",
-     "start_time": "2023-06-27T12:18:17.170400882Z"
+     "end_time": "2023-06-30T16:50:45.190933496Z",
+     "start_time": "2023-06-30T16:50:45.183518030Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "'(program (class_declaration name: (identifier) body: (class_body (line_comment) (line_comment) (line_comment) (field_declaration type: (boolean_type) declarator: (variable_declarator name: (identifier))) (line_comment) (method_declaration type: (void_type) name: (identifier) parameters: (formal_parameters) body: (block (expression_statement (assignment_expression left: (identifier) right: (true))) (expression_statement (method_invocation object: (field_access object: (identifier) field: (identifier)) name: (identifier) arguments: (argument_list (binary_expression left: (string_literal (string_fragment)) right: (identifier))))))) (line_comment) (method_declaration type: (void_type) name: (identifier) parameters: (formal_parameters) body: (block (expression_statement (assignment_expression left: (identifier) right: (false))) (expression_statement (method_invocation object: (field_access object: (identifier) field: (identifier)) name: (identifier) arguments: (argument_list (binary_expression left: (string_literal (string_fragment)) right: (identifier))))))))) (class_declaration name: (identifier) body: (class_body (method_declaration (modifiers) type: (void_type) name: (identifier) parameters: (formal_parameters (formal_parameter type: (array_type element: (type_identifier) dimensions: (dimensions)) name: (identifier))) body: (block (line_comment) (local_variable_declaration type: (type_identifier) declarator: (variable_declarator name: (identifier) value: (object_creation_expression type: (type_identifier) arguments: (argument_list)))) (local_variable_declaration type: (type_identifier) declarator: (variable_declarator name: (identifier) value: (object_creation_expression type: (type_identifier) arguments: (argument_list)))) (line_comment) (line_comment) (expression_statement (method_invocation object: (identifier) name: (identifier) arguments: (argument_list))) (line_comment) (line_comment) (expression_statement (method_invocation object: (identifier) name: (identifier) arguments: (argument_list))))))))'"
+      "text/plain": "'(program (package_declaration (scoped_identifier scope: (scoped_identifier scope: (identifier) name: (identifier)) name: (identifier))) (import_declaration (scoped_identifier scope: (scoped_identifier scope: (identifier) name: (identifier)) name: (identifier))) (import_declaration (scoped_identifier scope: (scoped_identifier scope: (identifier) name: (identifier)) name: (identifier))) (import_declaration (scoped_identifier scope: (scoped_identifier scope: (identifier) name: (identifier)) name: (identifier))) (import_declaration (scoped_identifier scope: (scoped_identifier scope: (identifier) name: (identifier)) name: (identifier))) (import_declaration (scoped_identifier scope: (scoped_identifier scope: (identifier) name: (identifier)) name: (identifier))) (import_declaration (scoped_identifier scope: (scoped_identifier scope: (identifier) name: (identifier)) name: (identifier))) (class_declaration name: (identifier) body: (class_body (line_comment) (line_comment) (line_comment) (field_declaration type: (boolean_type) declarator: (variable_declarator name: (identifier))) (line_comment) (method_declaration type: (void_type) name: (identifier) parameters: (formal_parameters) body: (block (expression_statement (assignment_expression left: (identifier) right: (true))) (expression_statement (method_invocation object: (field_access object: (identifier) field: (identifier)) name: (identifier) arguments: (argument_list (binary_expression left: (string_literal (string_fragment)) right: (identifier))))))) (line_comment) (method_declaration type: (void_type) name: (identifier) parameters: (formal_parameters) body: (block (expression_statement (assignment_expression left: (identifier) right: (false))) (expression_statement (method_invocation object: (field_access object: (identifier) field: (identifier)) name: (identifier) arguments: (argument_list (binary_expression left: (string_literal (string_fragment)) right: (identifier))))))))) (class_declaration name: (identifier) body: (class_body (method_declaration (modifiers) type: (void_type) name: (identifier) parameters: (formal_parameters (formal_parameter type: (array_type element: (type_identifier) dimensions: (dimensions)) name: (identifier))) body: (block (line_comment) (local_variable_declaration type: (type_identifier) declarator: (variable_declarator name: (identifier) value: (object_creation_expression type: (type_identifier) arguments: (argument_list)))) (local_variable_declaration type: (type_identifier) declarator: (variable_declarator name: (identifier) value: (object_creation_expression type: (type_identifier) arguments: (argument_list)))) (line_comment) (line_comment) (expression_statement (method_invocation object: (identifier) name: (identifier) arguments: (argument_list))) (line_comment) (line_comment) (expression_statement (method_invocation object: (identifier) name: (identifier) arguments: (argument_list))))))))'"
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,8 +182,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-27T12:18:17.217627893Z",
-     "start_time": "2023-06-27T12:18:17.213653063Z"
+     "end_time": "2023-06-30T16:50:45.602377915Z",
+     "start_time": "2023-06-30T16:50:45.586782991Z"
     }
    }
   },
@@ -232,7 +241,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[(<Node type=scoped_identifier, start_point=(1, 8), end_point=(1, 28)>, 'package')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = JAVA_LANGUAGE.query(\"\"\"\n",
+    "    (package_declaration ((scoped_identifier scope: (scoped_identifier scope: (identifier) name: (identifier)) name: (identifier))) @package)\"\"\")\n",
+    "captures_b = query.captures(tree.root_node)\n",
+    "print(len(captures_b))\n",
+    "print(captures_b)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T16:51:58.437292050Z",
+     "start_time": "2023-06-30T16:51:58.392496842Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "res = []\n",
@@ -243,20 +280,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-27T12:18:17.292670050Z",
-     "start_time": "2023-06-27T12:18:17.215201301Z"
+     "end_time": "2023-06-30T16:51:59.348428344Z",
+     "start_time": "2023-06-30T16:51:59.342760243Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Lamp', 'isOn', 'turnOn', 'isOn', 'System', 'out', 'println', 'isOn', 'turnOff', 'isOn', 'System', 'out', 'println', 'isOn', 'Main', 'main', 'String', 'args', 'Lamp', 'led', 'Lamp', 'Lamp', 'halogen', 'Lamp', 'led', 'turnOn', 'halogen', 'turnOff']\n"
+      "['weka.core.converters']\n"
      ]
     }
    ],
@@ -266,8 +303,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-27T12:18:17.304160416Z",
-     "start_time": "2023-06-27T12:18:17.261616319Z"
+     "end_time": "2023-06-30T16:52:00.590405578Z",
+     "start_time": "2023-06-30T16:52:00.583711590Z"
     }
    }
   },
